<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/White_norm"
tools:context=".MainActivity"
    >


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White_norm"
            android:orientation="vertical"
            android:theme="@style/AppTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/courgette" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/name2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/amaranth" />


            </LinearLayout>


        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_gravity="left"
                    android:layout_weight=".50">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:onClick="Click_layout"
                        android:contentDescription="Theory"
                        android:src="@drawable/te2_r"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/theor"
                        android:textColor="@color/White"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/amaranth" />

                </FrameLayout>


                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_gravity="left"
                    android:layout_weight=".50">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:onClick="Click_layout"
                        android:src="@drawable/tr2_r"
                        android:contentDescription="Training"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/tren"
                        android:textColor="@color/White"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/amaranth" />
                </FrameLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight=".40" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:onClick="Click_layout"
                        android:src="@drawable/ex_r"
                        android:contentDescription="Exam"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/exam"
                        android:textColor="@color/White"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/amaranth" />


                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight=".40">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:onClick="Click_layout"
                        android:src="@drawable/er_r"
                        android:contentDescription="Rules"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:text="Правила"
                        android:textColor="@color/White"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/amaranth" />


                </FrameLayout>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="#d8d8d8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="Статистика"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/amaranth" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="max балл"
                    android:textColor="@color/Gray"
                    android:textSize="10sp"
                    app:fontFamily="@font/amaranth" />

                <TextView
                    android:id="@+id/textprogress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="0/100"
                    android:textColor="@color/Gray"
                    android:textSize="10sp"
                    app:fontFamily="@font/amaranth" />


            </FrameLayout>


            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="тренировка"
                    android:textColor="@color/Gray"
                    android:textSize="10sp"
                    app:fontFamily="@font/amaranth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="0/20"
                    android:textColor="@color/Gray"
                    android:textSize="10sp"
                    app:fontFamily="@font/amaranth" />


            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="#d8d8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/vk"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/vk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="Наша группа"

                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    app:fontFamily="@font/amaranth" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#d8d8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="onBackPressed"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/logout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="Выход"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    app:fontFamily="@font/amaranth" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="#d8d8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>

</android.support.v7.widget.LinearLayoutCompat>